--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="header__top container">
+                <h1 class="visually-hidden">2G-SLIM</h1>
                 <div class="header__burger"><img src="images/icons/burger.svg" alt="бургер меню" width="24" height="18"></div>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
@@ -122,7 +123,7 @@
 
             <section class="nutrition">
                 <div class="nutrition__inner container">
-                    <img class="nutrition__img" src="images/nutrition/nutrition.png" alt="2G SLIM" class="nutrition__img" width="176">
+                    <img class="nutrition__img" src="images/nutrition/nutrition.png" alt="2G SLIM" width="176">
                     <p class="nutrition__text">БЕЗ ФИЗИЧЕСКИХ НАГРУЗОК И ОГРАНИЧЕНИЙ В ПИТАНИИ, ИДЕАЛЬНЫЕ СИЛУЭТЫ НЕ ЗАСТАВЯТ BAC ДОЛГО ЖДАТЬ!</p>
                     <div class="clearfix"></div>
                 </div>
@@ -249,6 +250,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
 
             <section class="effect">
